set document data using class options
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -6,7 +6,8 @@
 
 \subsection*{Declaration of Authorship}
 
-I declare that I carried out this \ThesisType{} thesis on my own, and only with the cited sources, literature and other professional sources.
+\makeatletter
+I declare that I carried out this \textured@thesisType{} thesis on my own, and only with the cited sources, literature and other professional sources.
 I understand that my work relates to the rights and obligations under the Act No.~121/2000 Sb., the~Copyright Act, as amended, in particular the fact that the Charles University has the right to conclude a license agreement on the use of this work as a school work pursuant to Section 60 subsection 1 of the Copyright Act.
 
 \vspace{7ex}
@@ -15,9 +16,10 @@ I understand that my work relates to the rights and obligations under the Act No
     \renewcommand{\arraystretch}{1.3}
     \begin{tabular}{W{c}{0.32\linewidth} p{2em} W{c}{0.42\linewidth}}
         \arrayrulecolor{Gray70} \cmidrule{1-1} \cmidrule{3-3} % gray placeholder lines
-        \emph{\textsf{Place \& Date}} && \emph{\textsf{\ThesisAuthor}} \\
+        \emph{\textsf{Place \& Date}} && \emph{\textsf{\textured@author}} \\
     \end{tabular}
 \end{center}
+\makeatother
 
 \vspace{5em}
 \newpage
