--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -6,7 +6,9 @@
     Write dedication here.
     \begin{flushright}
         \sffamily\large
-        \ThesisAuthor
+        \makeatletter
+        \textured@author
+        \makeatother
     \end{flushright}
 }
 
