--- a/preamble/data.tex
+++ b/preamble/data.tex
@@ -1,25 +1,25 @@
 %% Thesis type: bachelor, master, doctoral
-\newcommand*{\ThesisType}{master}
+\newcommand*{\textured@thesisType}{master}
 
 %% Thesis title (exactly as in the formal assignment)
-\newcommand*{\ThesisTitle}{\TeXtured{} Manual}
+\newcommand*{\textured@title}{\TeXtured{} Manual}
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisTitle)
-\newcommand*{\ThesisTitlePlaintext}{TeXtured Manual \TeXturedVERSION}
+\newcommand*{\textured@titlePlaintext}{TeXtured Manual \TeXturedVERSION}
 %% Thesis title (if custom formatting is needed for the title page, defauls to \ThesisTitle)
-\newcommand*{\ThesisTitleFront}{
-    \ThesisTitle\\
+\newcommand*{\textured@titleFront}{
+    \textured@title\\
     {\Huge\color{gray}\TeXturedVERSION}
 }
 
 %% Author of the thesis
-\newcommand*{\ThesisAuthor}{\textcolor{red}{Author's Name}}
+\newcommand*{\textured@author}{\textcolor{red}{Author's Name}}
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisAuthor)
-\newcommand*{\ThesisAuthorPlaintext}{Author's Name}
+\newcommand*{\textured@authorPlaintext}{Author's Name}
 
 %% Year when the thesis is submitted
-\newcommand*{\YearSubmitted}{2025}
+\newcommand*{\textured@yearSubmitted}{2025}
 %% Year of the last revision, uncomment if it is different from \YearSubmitted
-% \newcommand*{\YearRevision}{2025}
+% \newcommand*{\textured@yearRevision}{2025}
 
 %% University
 \newcommand*{\University}{Charles University}
@@ -27,37 +27,37 @@
 %% Name of the department or institute, where the work was officially assigned
 %% (according to the Organizational Structure of MFF UK in English,
 %% or a full name of a department outside MFF)
-\newcommand*{\Department}{\textcolor{red}{Name of the Department/Institute}}
+\newcommand*{\textured@department}{\textcolor{red}{Name of the Department/Institute}}
 
 %% Is it a Department (katedra), or an Institute (ústav)?
-\newcommand*{\DeptType}{Institute}
+\newcommand*{\textured@deptType}{Institute}
 
 %% Thesis supervisor: name, surname and titles
-\newcommand*{\Supervisor}{\textcolor{red}{Name, Surname, and Titles}}
+\newcommand*{\textured@supervisor}{\textcolor{red}{Name, Surname, and Titles}}
 %% Thesis co-supervisor: name, surname and titles (uncomment if applicable)
-% \newcommand*{\CoSupervisor}{Name, Surname, and Titles}
+% \newcommand*{\textured@coSupervisor}{Name, Surname, and Titles}
 
 %% Supervisor's department/institute (again according to Organizational structure of MFF)
-\newcommand*{\SupervisorsDepartment}{\textcolor{red}{Supervisor's Department/Institute}}
+\newcommand*{\textured@supervisorsDepartment}{\textcolor{red}{Supervisor's Department/Institute}}
 
 %% Study programme and specialization
-\newcommand*{\StudyProgramme}{\textcolor{red}{Study Programme}}
+\newcommand*{\textured@studyProgramme}{\textcolor{red}{Study Programme}}
 
 %% Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
-\newcommand*{\Abstract}{%
+\newcommand*{\textured@abstract}{%
     \textcolor{red}{Write abstract here.}
 }
 
 %% Subject (short description for PDF metadata)
-\newcommand*{\Subject}{%
+\newcommand*{\textured@subject}{%
     Write subject here.
 }
 
 %% Keywords (about 3-7)
-\newcommand*{\Keywords}{%
+\newcommand*{\textured@keywords}{%
     \textcolor{red}{Manual, Demo, Draft, WIP}
 }
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \Keywords)
-\newcommand*{\KeywordsPlaintext}{%
+\newcommand*{\textured@keywordsPlaintext}{%
     Manual, Demo, Draft, WIP
 }
