--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -1,7 +1,7 @@
 %%% Preamble
 
 %% Data about the document, like title, author, etc.
-\input{preamble/data}
+% \input{preamble/data}
 
 %% DEBUG: various helper debug goodies
 \input{preamble/debug/commands}
