add preamble directory to TEXINPUTS
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/thesis.tex
+++ b/thesis.tex
@@ -17,7 +17,7 @@
     % twosided,  % choose the two-sided layout (for printing)
 }{textured}
 
-\documentclass[12pt,a4paper]{preamble/textured}
+\documentclass[12pt,a4paper]{textured}
 
 % Setup document data
 \newcommand*{\fillthisin}[1]{\textcolor{red}{#1}} % placeholder for required fields
