--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,7 @@
     CENSOR,      % THIS IS A CENSORED VERSION
     % noFANCY,   % disable some of the more fancy stylistic choices
     % twosided,  % choose the two-sided layout (for printing)
+    % showframe, % show the page layout frame (for debugging)
 }{textured}
 
 \documentclass[12pt,a4paper]{textured}
@@ -29,6 +30,7 @@
     author={\fillthisin{Author's Name}},
     authorplaintext={Author's Name},
     yearsubmitted={\the\year},
+    % yearrevision={2026},
     department={\fillthisin{Name of the Department/Institute}},
     depttype={Institute}, % Department (katedra), or an Institute (ústav)
     supervisor={\fillthisin{Prof.~Name Surname}},
