--- a/thesis.tex
+++ b/thesis.tex
@@ -61,6 +61,9 @@
     % chapters/Appendix,
 }
 
+%% TODO: describe this
+% \addbibresource{add/path/to/references.bib}
+
 \begin{document}
 
 \frontmatter
