--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -25,11 +25,11 @@
 \input{preamble/misc/inkscape}
 
 %% Layout of the document, formatting of chapters, sections, TOC, etc.
-\input{preamble/layout/geometry}
-\input{preamble/layout/numbering}
-\input{preamble/layout/headers}
-\input{preamble/layout/titles}
-\input{preamble/layout/toc}
+% \input{preamble/layout/geometry}
+% \input{preamble/layout/numbering}
+% \input{preamble/layout/headers}
+% \input{preamble/layout/titles}
+% \input{preamble/layout/toc}
 
 %% Bibliography/References configuration
 \input{preamble/references/biblatex}
