--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -41,10 +41,10 @@
 \input{preamble/math/spacing}
 
 %% Theorem-like, Remark-like, and Todo-like environments
-\input{preamble/environments/init}
-\input{preamble/environments/theorem-like}
-\input{preamble/environments/remark-like}
-\input{preamble/environments/todo-like}
+% \input{preamble/environments/init}
+% \input{preamble/environments/theorem-like}
+% \input{preamble/environments/remark-like}
+% \input{preamble/environments/todo-like}
 
 %% Hacky stuff, oftentimes overriding commands of other packages
 \input{preamble/hacks/custom-reference-boxes}
