--- a/preamble/textured.cls
+++ b/preamble/textured.cls
@@ -87,6 +87,7 @@
 %% Preamble - data, packages, macros, and more
 \input{preamble/main}
 \RequirePackage{textured-layout}
+\RequirePackage{textured-envs}
 
 % \ClassError[textured]{<error-text>}{<help-text>}
 % \ClassWarning[textured]{<warning-text>}
