--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -4,9 +4,9 @@
 % \input{preamble/data}
 
 %% DEBUG: various helper debug goodies
-\input{preamble/debug/commands}
-\input{preamble/debug/line-numbers}
-\input{preamble/debug/silence}
+% \input{preamble/debug/commands}
+% \input{preamble/debug/line-numbers}
+% \input{preamble/debug/silence}
 
 %% Colors
 \input{preamble/general/colors}
