--- a/preamble/textured.cls
+++ b/preamble/textured.cls
@@ -85,6 +85,7 @@
 % \RequirePackage[...]{package-name}[<release-info>]
 
 %% Preamble - data, packages, macros, and more
+\RequirePackage{textured-debug}
 \input{preamble/main}
 \RequirePackage{textured-layout}
 \RequirePackage{textured-envs}
