--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -8,15 +8,15 @@
 % \input{preamble/debug/line-numbers}
 % \input{preamble/debug/silence}
 
-%% Colors
-\input{preamble/general/colors}
-
-%% Typesetting, figures, tables, etc.
-\input{preamble/general/typesetting}
-\input{preamble/general/floats}
-
-%% Hyperlinks, PDF metadata
-\input{preamble/general/hyperref}
+% %% Colors
+% \input{preamble/general/colors}
+%
+% %% Typesetting, figures, tables, etc.
+% \input{preamble/general/typesetting}
+% \input{preamble/general/floats}
+%
+% %% Hyperlinks, PDF metadata
+% \input{preamble/general/hyperref}
 
 %% Miscellaneous commands/macros
 \input{preamble/misc/macros}
