--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -19,10 +19,10 @@
 % \input{preamble/general/hyperref}
 
 %% Miscellaneous commands/macros
-\input{preamble/misc/macros}
-\input{preamble/misc/packages-macros}
-\input{preamble/misc/tikz}
-\input{preamble/misc/inkscape}
+% \input{preamble/misc/macros}
+% \input{preamble/misc/packages-macros}
+% \input{preamble/misc/tikz}
+% \input{preamble/misc/inkscape}
 
 %% Layout of the document, formatting of chapters, sections, TOC, etc.
 % \input{preamble/layout/geometry}
