--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -32,7 +32,7 @@
 % \input{preamble/layout/toc}
 
 %% Bibliography/References configuration
-\input{preamble/references/biblatex}
+% \input{preamble/references/biblatex}
 
 %% Math stuff
 \input{preamble/math/packages}
