--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -35,10 +35,10 @@
 % \input{preamble/references/biblatex}
 
 %% Math stuff
-\input{preamble/math/packages}
-\input{preamble/math/fonts}
-\input{preamble/math/macros}
-\input{preamble/math/spacing}
+% \input{preamble/math/packages}
+% \input{preamble/math/fonts}
+% \input{preamble/math/macros}
+% \input{preamble/math/spacing}
 
 %% Theorem-like, Remark-like, and Todo-like environments
 % \input{preamble/environments/init}
