--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -47,10 +47,10 @@
 % \input{preamble/environments/todo-like}
 
 %% Hacky stuff, oftentimes overriding commands of other packages
-\input{preamble/hacks/custom-reference-boxes}
-\input{preamble/hacks/fix-qed}
-\input{preamble/hacks/fix-hyperref}
-\input{preamble/hacks/floatrow-parskip}
+% \input{preamble/hacks/custom-reference-boxes}
+% \input{preamble/hacks/fix-qed}
+% \input{preamble/hacks/fix-hyperref}
+% \input{preamble/hacks/floatrow-parskip}
 
 %% User macros
 \input{preamble/user/main}
