--- a/thesis.tex
+++ b/thesis.tex
@@ -61,6 +61,7 @@
     % chapters/Appendix,
 }
 
+\input{preamble/user/main}
 %% TODO: describe this
 % \addbibresource{add/path/to/references.bib}
 
