fix(titletoc): use \partname instead of hardcoded Part
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/layout/titles.tex
+++ b/preamble/layout/titles.tex
@@ -18,7 +18,7 @@
 %% Part title (page) formatting
 \titleformat{\part}[display]
 {\thispagestyle{empty}\sffamily}
-{\LARGE Part~\Romanbar{\thepart}}
+{\LARGE \partname~\Romanbar{\thepart}}
 {0.2em}{\fontsize{30pt}{36pt}\selectfont\bfseries}
 
 %%% Chapter title formatting
