--- a/preamble/layout/toc.tex
+++ b/preamble/layout/toc.tex
@@ -47,6 +47,6 @@
 
 %% part entries in TOC are centered, bigger, and without page number
 \titlecontents{part}[2em]{\addvspace{3ex}\filcenter} % centered part title
-{\small Part~\thecontentslabel\\*[-0.2ex]\Large\bfseries}{\Large\bfseries}
+{\small \partname~\thecontentslabel\\*[-0.2ex]\Large\bfseries}{\Large\bfseries}
 {}[\addvspace{1.0ex}] % without page number
 
