docs(bib): add Master Thesis reference
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/bibliography.bib
+++ b/preamble/bibliography.bib
@@ -19,6 +19,19 @@
     eprint        = {2211.05759},
     github        = {jdujava/CountingInEFT},
 }
+@thesis{Dujava2025,
+    author        = {Dujava, Jon\'{a}\v{s}},
+    title         = {{Strongly Coupled Quantum Field Theory in Anti--de~Sitter Spacetime}},
+    type          = {Master Thesis},
+    institution   = {Charles University},
+    year          = {2025},
+    month         = {6},
+    url           = {https://hdl.handle.net/20.500.11956/199960},
+    archiveprefix = {arXiv},
+    primaryclass  = {hep-th},
+    eprint        = {2507.07111},
+    github        = {jdujava/ONinAdS},
+}
 @online{MaresTemplate,
     author        = {Mare\v{s}, Martin and Kom\'{a}rek, Arno\v{s}t and Kulich, Michal},
     title         = {{A Template for Typesetting Thesis at MFF UK in \LaTeX{}}},
